added content and website demo

--- a/demo.html
+++ b/demo.html
@@ -5,9 +5,12 @@
     <title>
         Basic Example to Describe JavaScript
     </title>
+    <!-- external JS -->
+    <!-- <script src="demo.js"></script> -->
 </head>
   
 <body>
+    <!-- internal JS -->
     <script>
         console.log("Welcome to Intro to JS course!");
     </script>
