--- a/counter-demo/index.html
+++ b/counter-demo/index.html
@@ -1,15 +1,17 @@
 <html>
-  <head>
-      <link rel="stylesheet" href="index.css">
-  </head>
-  <body>
-      <h1>Blackjack</h1>
-      <p id="message-el">Want to play a round?</p>
-      <p id="cards-el">Cards:</p>
-      <p id="sum-el">Sum:</p>
-      <button onclick="startGame()">START GAME</button>
-      <button onclick="newCard()">NEW CARD</button>
-      <p id="player-el"></p>
-      <script src="index.js"></script>
-  </body>
+    <head>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+      <div>
+        <h1>People entered:</h1>
+        <h2 id="count-el">0</h2>
+        <button id="increment-btn" onclick="increment()">INCREMENT</button>
+        <button id="save-btn" onclick="save()">SAVE</button>
+        <p id="save-el">Previous entries: </p>
+        <script src="index.js">
+            nnerText
+        </script>
+      </div>
+    </body>
 </html>
