--- a/counter-demo/index.html
+++ b/counter-demo/index.html
@@ -1,3 +1,8 @@
+<!-- Backstory:
+You are the Christmas Tree Farm manager/Software Engineer -- super busy person. You have to manage the farm by
+counting how many Christmas trees that are left with the counter that YOU built. The initial count is 100. The Christmas Tree Farm also has an extremely generous return policy
+that people can return Christmas tree. -->
+
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
@@ -5,7 +10,7 @@
     <body>
       <div>
         <h1>People entered:</h1>
-        <h2 id="count-el">0</h2>
+        <h2 id="count-el">100</h2>
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
         <button id="save-btn" onclick="save()">SAVE</button>
         <p id="save-el">Previous entries: </p>
