added more criterias to the exercise

--- a/counter-demo/index.html
+++ b/counter-demo/index.html
@@ -1,6 +1,6 @@
 <!-- Backstory:
 You are the Christmas Tree Farm manager/Software Engineer -- super busy person. You have to manage the farm by
-counting how many Christmas trees that are left with the counter that YOU built. The initial count is 100. The Christmas Tree Farm also has an extremely generous return policy
+counting how many Christmas trees that are left with the counter app that YOU built. The initial count is 100. The Christmas Tree Farm also has an extremely generous return policy
 that people can return Christmas tree. -->
 
 <html>
@@ -12,7 +12,7 @@ that people can return Christmas tree. -->
         <h1>People entered:</h1>
         <h2 id="count-el">100</h2>
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
-        <button id="save-btn" onclick="save()">SAVE</button>
+
         <p id="save-el">Previous entries: </p>
         <script src="index.js">
             nnerText
