worked on the solution

--- a/counter-demo/index.html
+++ b/counter-demo/index.html
@@ -9,13 +9,13 @@ that people can return Christmas tree. -->
     </head>
     <body>
       <div>
-        <h1>People entered:</h1>
+        <h1>Christmas Tree(s) Left:</h1>
         <h2 id="count-el">10</h2>
         <!-- decrementing the count, external JS method-->
-        <!-- <button id="decrement-btn" onclick="decrement()">Decrement 🎄</button> -->
-        
+        <!-- <button id="decrement-btn" onclick="decrement()">DECREMENT 🎄</button> -->
+
         <!-- decrementing the count, internal JS method-->
-        <button id="decrement-btn">Decrement 🎄</button>
+        <button id="decrement-btn">DECREMENT 🎄</button>
         <!-- <script>
           const button = document.getElementById('decrement-btn')
           let count = 10;
@@ -30,7 +30,6 @@ that people can return Christmas tree. -->
             }
           });
         </script> -->
-        <p id="save-el">Previous entries: </p>
         <script src="index.js"></script>
       </div>
     </body>
