--- a/counter-solution/index.html
+++ b/counter-solution/index.html
@@ -8,14 +8,21 @@ that people can return Christmas tree. -->
     </head>
     <body>
       <div>
-        <h1>People entered:</h1>
-        <h2 id="count-el">100</h2>
-        <button id="increment-btn" onclick="increment()">INCREMENT</button>
-        <button id="save-btn" onclick="save()">SAVE</button>
-        <p id="save-el">Previous entries: </p>
-        <script src="index.js">
-            nnerText
-        </script>
+        <h1>Christmas Tree(s) Left:</h1>
+        <h2 id="count-el">10</h2>
+
+        <!-- decrementing the count, external JS method-->
+        <button id="decrement-btn" onclick="decrement()">DECREMENT 🎄</button>
+        <!-- Add INCREMENT button under this line -->
+        <button id="increment-btn" onclick="increment()">INCREMENT 🎄</button>
+        <!-- Add SAVE button under this line-->
+        <!-- emoji's optional lol -->
+        <button id="save-btn" onclick="save()">SAVE ☃️</button>
+        
+        <!-- Add a text "Christmas Tree Sold Each Day: " with an id "save-el" to save an array of numbers -->
+        <p id="save-el">Christmas Tree Sold Each Day: </p>
+        
+        <script src="./index.js">innertext</script>
       </div>
     </body>
 </html>
