--- a/counter-demo/index.html
+++ b/counter-demo/index.html
@@ -12,10 +12,10 @@ that people can return Christmas tree. -->
         <h1>Christmas Tree(s) Left:</h1>
         <h2 id="count-el">10</h2>
         <!-- decrementing the count, external JS method-->
-        <!-- <button id="decrement-btn" onclick="decrement()">DECREMENT 🎄</button> -->
+        <button id="decrement-btn" onclick="decrement()">DECREMENT 🎄</button>
 
         <!-- decrementing the count, internal JS method-->
-        <button id="decrement-btn">DECREMENT 🎄</button>
+        <!-- <button id="decrement-btn">DECREMENT 🎄</button> -->
         <!-- <script>
           const button = document.getElementById('decrement-btn')
           let count = 10;
